record auth